# aoc-pico

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
embed-init/: Cargo.toml
embed-init-macros/: Cargo.toml
embed-init-macros/src/: lib.rs
embed-init/src/: lib.rs
myasync/: Cargo.toml
myasync/src/: lib.rs
rp2040-async/: Cargo.toml
rp2040-async/src/: dma.rs  lib.rs  timer.rs  trigger.rs  uart.rs  waker_slot.rs
src/: app.rs  console.rs  dma.rs  lib.rs  linux.rs  main.rs  memory.rs  multicore.rs  pico.rs  shell.rs  stack_guard.rs  static_cell.rs
src/aoc/: coord.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/pico/: app.rs  dma.rs  memory.rs  multicore.rs
