[package]
name = "rp2040-async"
version = "0.1.0"
edition = "2021"

[dependencies]
rp2040-hal = "0.11.0"
critical-section = "1.2.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
nb = "1.1.0"
#defmt = "0.3.8"

[features]
alarm0 = ["rp2040-hal/rt"]
alarm1 = ["rp2040-hal/rt"]
alarm2 = ["rp2040-hal/rt"]
alarm3 = ["rp2040-hal/rt"]
dma0 = ["rp2040-hal/rt"]
dma1 = ["rp2040-hal/rt"]
uart0 = ["rp2040-hal/rt"]
uart1 = ["rp2040-hal/rt"]
